Fix news page spacing between date and author username

--- a/chessus-frontend/src/containers/news/news.module.scss
+++ b/chessus-frontend/src/containers/news/news.module.scss
@@ -112,6 +112,7 @@
 .author-link {
   color: var(--accent-primary);
   text-decoration: none;
+  margin-left: 0.25em;
 
   &:hover {
     text-decoration: underline;
